--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap');
+
+:root {
+  --bgred: #555;
+  --wrapperHeight: 10%;
+  --wrapperWidth: 10%;
+  --background: #eaddcf;
+  --btnBackgroud: #eaddcf;
+  --border: #333;
+  --cardFrontColor: #8c7851;
+  --textColor: #423314;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +20,266 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Reset CSS */
+
+html{
+  box-sizing: border-box;
+  font-size: 100%;
+  font: inherit;
+}
+
+*, *:before, *:after{
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul{
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol, ul{
+  list-style: none;
+}
+
+body {
+  background-color: var(--background);
+  color: var(--textColor);
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+}
+
+.header {
+  width: 100%;
+  text-align: center;
+  padding-top: 1rem;
+  font-size: 48px;
+  font-family: 'Yeon Sung', cursive;
+}
+
+.game {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  border: 1px solid var(--border);
+  padding: 1.5rem;
+  margin: 1rem;
+  font-family: 'Yeon Sung', cursive;
+}
+
+/* Select mode styling */
+.option {
+  width: 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 14px;
+}
+.modes span {
+  width: 100%;
+  text-align: left;
+  font-size: 22px;
+  font-weight: 600;
+}
+.modes > button, .option > button, .game-over {
+  width: 100%;
+  margin: 0.5rem 0;
+  height: 2rem;
+  font-family: 'Yeon Sung', cursive;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid var(--border);
+  background-color: var(--btnBackgroud);
+}
+.modes > button:hover, .option > button:hover {
+  cursor: pointer;
+  border-width: 3px !important;
+}
+
+.modes {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.how-to-play-heading {
+  font-weight: 600;
+  padding-bottom: 0.5rem;
+}
+.how-to-play-btn {
+  display: none;
+  position: relative;
+  padding: 0.5rem 0.5rem;
+  width: 2rem;
+}
+.how-to-play-btn:hover {
+  cursor: pointer;
+}
+
+.restart-game {
+  margin-bottom: 1.5rem !important;
+}
+
+/* Card wrapper */
+.card-stack {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  width: 60rem;
+  height: 30rem;
+}
+
+/* Flip animation and different card styling */
+
+.wrapper {
+  text-align: center;
+  margin: 0.25rem;
+  height: var(--wrapperHeight);
+  width: var(--wrapperWidth);
+  background-color: transparent;
+  perspective: 1000px;
+}
+
+.wrapper:hover {
+  cursor: pointer;
+}
+
+.complete {
+  opacity: 0;
+  transform: rotateY(180deg);
+  transition: all 0.8s;
+}
+
+.card {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  transition: all 0.8s;
+  transform-style: preserve-3d;
+  transform: rotateZ(-2deg);
+  border: solid 2px #41403E;
+  border-radius: 15px 225px 15px 255px/255px 15px 225px 15px;
+}
+
+.show {
+  transform: rotateY(-180deg);
+}
+.card-front, .card-back {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  backface-visibility: hidden;
+}
+.card-front {
+  background: var(--cardFrontColor);
+  border-radius: 15px 225px 15px 255px/255px 15px 225px 15px;
+  /* background: url(https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/11-casino-pattern-gambling-luck-money-poker-cards-mister-tee.jpg) no-repeat center; */
+  background-size: cover;
+
+}
+.card-back {
+  transform: rotateY(180deg);
+  border-radius: 15px 225px 15px 255px/255px 15px 225px 15px;
+}
+
+.card-back img {
+  height: 100%;
+  width: 100%;
+  border: solid 2px #41403E;
+  border-radius: 15px 225px 15px 255px/255px 15px 225px 15px;
+}
+
+/*  GameOver css */
+.game-over-div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes fadeIn{
+  0%   { opacity: 0; }
+  100% { opacity: 1; } 
+}
+.game-over {
+  animation: fadeIn 1s ease-in-out forwards;
+  transition: all 1ms;
+  width: 10rem;
+}
+.game-over:hover {
+  cursor: pointer;
+  border-width: 3px !important;
+}
+
+/*  Border Effect  */
+.sketchy {
+  border: 3px solid #333333;
+  border-radius: 15px 225px 15px 255px/255px 15px 225px 15px;
+  position: relative;
+}
+
+.sketchy-thin {
+  border: solid 2px #41403E !important;
+  border-radius: 200px 1202px 225px 15px/1220px 200px 1000px 255px !important;
+}
+.sketchy-thick {
+  border:solid 4px #41403E !important;
+  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px !important;
+}
+
+/*  Media querries */
+
+@media (max-width: 800px) {
+  .how-to-play-btn {
+    display: block;
+    position: relative;
+  }
+  .how-to-play-info-wrapper{
+    display: none;
+    position: absolute;
+    left: 3rem;
+    padding: 0.5rem 0.5rem 0.5rem 1rem;
+    background-color: var(--background);
+    border: solid 2px #41403E;
+    border-radius: 200px 1202px 225px 15px/1220px 200px 1000px 255px;
+    z-index: 5;
+  }
+  .game {
+    flex-direction: column;
+  }
+  .option, .modes {
+    flex-direction: row;
+  }
+  .modes {
+    flex: 1;
+    justify-content: flex-start;
+  }
+  .modes span {
+    width: auto;
+  }
+  .modes > * {
+    margin: 1rem;
+  }
+  .option {
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .modes > button, .option > button {
+    width: auto;
+    margin: 0.5rem !important;
+    font-size: 14px;
+  }
+  .card-stack {
+    width: 100%;
+  }
 }
